@@ -1,5 +1,5 @@
 /*
-   Copyright (C) 2001-2012, 2014-2019 Free Software Foundation, Inc.
+   Copyright (C) 2001-2012, 2014-2020 Free Software Foundation, Inc.
    Written by Keisuke Nishida, Roger While, Simon Sobisch, Dave Pitts
 
    This file is part of GnuCOBOL.
@@ -1328,7 +1328,7 @@ switch_to_buffer (const int line, const char *file, const YY_BUFFER_STATE buffer
 static int
 is_condition_directive_clause (const char *buff)
 {
-	while (buff && !isalpha (*buff)) {
+	while (buff && !isalpha ((unsigned char)(*buff))) {
 		++buff;
 	}
 
@@ -1494,7 +1494,7 @@ start:
 	buff[n] = 0;
 
 	/* check for vcs conflict marker */
-	if (n == 8 || (n > 8 && isspace(buff[7]))) {
+	if (n == 8 || (n > 8 && isspace((unsigned char) buff[7]))) {
 		if (memcmp("<<<<<<<", buff, 7) == 0
 		 || memcmp("=======", buff, 7) == 0
 		 || memcmp(">>>>>>>", buff, 7) == 0) {
